--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<spinnaker.version>5.1.1-SNAPSHOT</spinnaker.version>
-		<slf4j.version>1.7.25</slf4j.version>
+		<slf4j.version>1.7.30</slf4j.version>
 		<log4j.version>2.13.0</log4j.version>
 		<junit.version>5.2.0</junit.version>
 		<checkstyle.version>8.18</checkstyle.version>
@@ -86,6 +86,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${log4j.version}</version>
+				<scope>runtime</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
@@ -166,11 +172,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>3.1.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.7.0</version>
 				</plugin>
@@ -188,6 +189,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.1.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>3.2.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -290,6 +296,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>**/nbproject/**</exclude>
 							<exclude>**/target/**</exclude>
 							<exclude>README.md</exclude>
+							<exclude>**/dependency-reduced-pom.xml</exclude>
 						</excludes>
 						<consoleOutput>true</consoleOutput>
 					</configuration>
