--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,17 @@ jobs:
         java: [8, 11, 13] # TODO: add 14
     env:
       SETTINGS_FILE: .github/settings.xml
+      CI_NAME: "Github Actions"
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set branch name and PR number
+        id: refs
+        env:
+          BRANCH_NAME_OR_REF: ${{ github.head_ref || github.ref }}
+        run: |
+          echo "::set-output name=branch_name::${BRANCH_NAME_OR_REF#refs/heads/}"
+          echo "::set-output name=pr_number::$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")"
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -40,7 +48,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2-j${{ matrix.java }}
 
       - name: Ensure dependencies are present
-        run: mvn -B dependency:resolve dependency:resolve-plugins --setting $SETTINGS_FILE || true
+        run: mvn -B dependency:resolve dependency:resolve-plugins --settings $SETTINGS_FILE || true
 
       - name: "Check: copyright declarations"
         run: mvn apache-rat:check --settings $SETTINGS_FILE -V || (find . -type f -name 'rat*.txt' -print | xargs grep -l unapproved | xargs cat; exit 1)
@@ -58,8 +66,13 @@ jobs:
         run: mvn javadoc:aggregate --settings $SETTINGS_FILE
 
       - name: "Report: Coverage via coveralls.io"
-        if: 1 == 0
-        run: mvn coveralls:report --settings $SETTINGS_FILE
+        if: ${{ secrets.COVERALLS_TOKEN }} != ""
+        run: mvn coveralls:report --settings $SETTINGS_FILE --no-transfer-progress -DrepoToken=${{ secrets.COVERALLS_TOKEN }}
+        env:
+          CI_BUILD_NUMBER: ${{ github.run_id }}
+          CI_BUILD_URL: https://github.com/${{ github.repository }}/commit/${{ github.event.after }}/checks
+          CI_BRANCH: ${{ steps.refs.outputs.branch_name }}
+          CI_PULL_REQUEST: ${{ steps.refs.outputs.pr_number }}
 
       - name: "Post: Purge SNAPSHOTs"
         # Do not cache SNAPSHOT dependencies; we don't use external snapshots and we
