--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,11 @@ jobs:
         id: refs
         env:
           BRANCH_NAME_OR_REF: ${{ github.head_ref || github.ref }}
+          COVERALLS_SECRET: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
           echo "::set-output name=branch_name::${BRANCH_NAME_OR_REF#refs/heads/}"
           echo "::set-output name=pr_number::$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")"
+          echo "::set-output name=secret_present::$(test -n "$COVERALLS_SECRET")"
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -66,13 +68,14 @@ jobs:
         run: mvn javadoc:aggregate --settings $SETTINGS_FILE
 
       - name: "Report: Coverage via coveralls.io"
-        if: ${{ secrets.COVERALLS_TOKEN }} != ""
-        run: mvn coveralls:report --settings $SETTINGS_FILE --no-transfer-progress -DrepoToken=${{ secrets.COVERALLS_TOKEN }}
+        if: ${{ steps.refs.outputs.secret_present }}
+        run: mvn coveralls:report --settings $SETTINGS_FILE --no-transfer-progress -DrepoToken=$COVERALLS_SECRET
         env:
           CI_BUILD_NUMBER: ${{ github.run_id }}
           CI_BUILD_URL: https://github.com/${{ github.repository }}/commit/${{ github.event.after }}/checks
           CI_BRANCH: ${{ steps.refs.outputs.branch_name }}
           CI_PULL_REQUEST: ${{ steps.refs.outputs.pr_number }}
+          COVERALLS_SECRET: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
       - name: "Post: Purge SNAPSHOTs"
         # Do not cache SNAPSHOT dependencies; we don't use external snapshots and we
