--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           echo "::set-output name=branch_name::${BRANCH_NAME_OR_REF#refs/heads/}"
           echo "::set-output name=pr_number::$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")"
-          echo "::set-output name=secret_present::$(test -n "$COVERALLS_SECRET")"
+          echo "::set-output name=secret_present::$(test -n "$COVERALLS_SECRET"; echo $?)"
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -68,7 +68,7 @@ jobs:
         run: mvn javadoc:aggregate --settings $SETTINGS_FILE
 
       - name: "Report: Coverage via coveralls.io"
-        if: ${{ steps.refs.outputs.secret_present }}
+        if: ${{ steps.refs.outputs.secret_present }} > 0
         run: mvn coveralls:report --settings $SETTINGS_FILE --no-transfer-progress -DrepoToken=$COVERALLS_SECRET
         env:
           CI_BUILD_NUMBER: ${{ github.run_id }}
