--- a/pom.xml
+++ b/pom.xml
@@ -458,10 +458,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<groupId>org.eluder.coveralls</groupId>
 							<artifactId>coveralls-maven-plugin</artifactId>
 							<dependencies>
+								<!-- Of course! -->
 								<dependency>
-									<groupId>jakarta.xml.bind</groupId>
-									<artifactId>jakarta.xml.bind-api</artifactId>
-									<version>2.3.2</version>
+									<groupId>javax.xml.bind</groupId>
+									<artifactId>jaxb-api</artifactId>
+									<version>2.3.1</version>
 								</dependency>
 							</dependencies>
 						</plugin>
