--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,13 +31,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set branch name and PR number
-        id: refs
-        env:
-          BRANCH_NAME_OR_REF: ${{ github.head_ref || github.ref }}
-        run: |
-          echo "::set-output name=branch_name::${BRANCH_NAME_OR_REF#refs/heads/}"
-          echo "::set-output name=pr_number::$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")"
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -56,18 +49,25 @@ jobs:
         run: mvn install --settings $SETTINGS_FILE -DskipTests=true -Dmaven.javadoc.skip=true
         
       - name: Build Documentation
-        run: mvn site --settings $SETTINGS_FILE
+        run: |
+          mvn site --settings $SETTINGS_FILE
+          touch $SITE_DIR/.nojekyll
 
       - name: "TEST DOC BUILD!"
-        run: ls -AlR
+        if: ${{ github.ref != 'refs/heads/master' }}
+        run: ls -AlRF
         working-directory: ${{ env.SITE_DIR }}
+        env:
+          CLICOLOR_FORCE: 1
+          TERM: xterm-color
 
-#      - name: Deploy to GitHub Pages
-#        uses: JamesIves/github-pages-deploy-action@3.7.1
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          branch: gh-pages
-#          folder: ${{ env.SITE_DIR }}
+      - name: Deploy to GitHub Pages
+        if: ${{ github.ref == 'refs/heads/master' }}
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: ${{ env.SITE_DIR }}
 
       - name: "Post: Purge SNAPSHOTs"
         # Do not cache SNAPSHOT dependencies; we don't use external snapshots and we
