--- a/pom.xml
+++ b/pom.xml
@@ -387,7 +387,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								<packages>uk.ac.manchester.spinnaker.alloc*</packages>
 							</group>
 						</groups>
-						<detectLinks>true</detectLinks>
 						<links>
 							<link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
 							<link>https://docs.spring.io/spring-security/site/docs/current/api/</link>
@@ -395,6 +394,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<link>https://javaee.github.io/javaee-spec/javadocs/</link>
 						</links>
 						<notimestamp>true</notimestamp>
+						<skippedModules>keycloak-management-client</skippedModules>
 					</configuration>
 				</plugin>
 				<plugin>
