Quarantine the keycloak client
It's just too nasty for Javadoc, with it claiming that the code uses
modules when it doesn't and I don't understand why. That blocks
publishing the docs, but since it is just for a tool that's really of
not much use to anyone outside of very special circumstances, I don't
mind that.

Also add a few more doc comments to it, since this might be the last
time they get touched...

--- a/pom.xml
+++ b/pom.xml
@@ -887,14 +887,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			</build>
 		</profile>
 		<profile>
-			<!-- This module needs Java 11 to build at all. -->
 			<id>JDK11AndLater</id>
 			<activation>
 				<jdk>[1.11,)</jdk>
 			</activation>
-			<modules>
-				<module>keycloak-management-client</module>
-			</modules>
 			<build>
 				<pluginManagement>
 					<plugins>
@@ -909,6 +905,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					</plugins>
 				</pluginManagement>
 			</build>
+		</profile>
+		<profile>
+			<!-- This module needs Java 11 to build at all. -->
+			<id>KeycloakClient</id>
+			<modules>
+				<module>keycloak-management-client</module>
+			</modules>
 		</profile>
 		<profile>
 			<id>JDK8</id>
