--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,8 +102,6 @@ jobs:
       run: mvn -B dependency:resolve dependency:resolve-plugins --settings $SETTINGS_FILE
       continue-on-error: true
 
-    - name: "Check: copyright declarations"
-      run: mvn apache-rat:check --settings $SETTINGS_FILE -V || (find . -type f -name 'rat*.txt' -print | xargs grep -l unapproved | xargs cat; exit 1)
     - name: "Check: Code Style"
       # Dependencies are such that compile needs to run before checkstyle
       run: mvn compile checkstyle:check --settings $SETTINGS_FILE -Dmaven.javadoc.skip=true -P "!jsp-precompile"
@@ -113,7 +111,28 @@ jobs:
       run: mvn javadoc:aggregate --settings $SETTINGS_FILE -P "!jsp-precompile"
 
     - name: "Post: Purge SNAPSHOTs"
-      # Do not cache SNAPSHOT dependencies; we don't use external snapshots and
-      # we will always rebuild internal snapshots.
+      # Do not cache SNAPSHOT dependencies; we don't use external snapshots
+      # and we will always rebuild internal snapshots.
       run: mvn dependency:purge-local-repository --settings $SETTINGS_FILE -DsnapshotsOnly=true -DreResolve=false
       continue-on-error: true
+
+  minor-style:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3.4.1
+      with:
+        distribution: 'zulu'
+        java-version: 11
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: minor-style-m2-j11-${{ hashFiles('**/pom.xml') }}
+        restore-keys: minor-style-m2-j11
+
+    - name: "Check: No FIXMEs left"
+      run: mvn --settings $SETTINGS_FILE -P CheckForFIXME exec:exec@check-for-fixme
+    - name: "Check: copyright declarations"
+      run: mvn apache-rat:check --settings $SETTINGS_FILE -V || (find . -type f -name 'rat*.txt' -print | xargs grep -l unapproved | xargs cat; exit 1)
