Added some simple tests of the command line API
It's not *properly* testing anything, but it does check that things are
not totally silly.

Note that this code is currently unavoidably impacted by:
* https://github.com/stefanbirkner/system-lambda/issues/27
* https://bugs.openjdk.org/browse/JDK-8199704

--- a/SpiNNaker-front-end/pom.xml
+++ b/SpiNNaker-front-end/pom.xml
@@ -91,6 +91,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.stefanbirkner</groupId>
+			<artifactId>system-lambda</artifactId>
+		</dependency>
 	</dependencies>
 	<description>The front-end interface. NB: not a GUI!</description>
 	<name>SpiNNaker Front End Interface</name>
