--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>javax.el</artifactId>
 				<version>3.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.stefanbirkner</groupId>
+				<artifactId>system-lambda</artifactId>
+				<version>1.2.1</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
