--- a/SpiNNaker-front-end/pom.xml
+++ b/SpiNNaker-front-end/pom.xml
@@ -25,7 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	</parent>
 	<artifactId>SpiNNaker-front-end</artifactId>
 	<properties>
-		<mainClass>uk.ac.manchester.spinnaker.front_end.CommandLineInterface</mainClass>
+		<main.class>uk.ac.manchester.spinnaker.front_end.CommandLineInterface</main.class>
 		<exeJar>${project.build.finalName}.jar</exeJar>
 	</properties>
 	<dependencies>
@@ -103,6 +103,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<finalName>spinnaker-exe</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-jar</id>
+						<configuration>
+							<forceCreation>true</forceCreation>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-shade-plugin</artifactId>
 				<executions>
 					<execution>
@@ -111,16 +123,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<goals>
 							<goal>shade</goal>
 						</goals>
-						<configuration>
-							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>${mainClass}</mainClass>
-									<manifestEntries>
-										<Multi-Release>true</Multi-Release>
-									</manifestEntries>
-								</transformer>
-							</transformers>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
