--- a/pom.xml
+++ b/pom.xml
@@ -387,12 +387,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								<artifact>*:*</artifact>
 								<excludes>
 									<!-- Strip unwanted junk -->
-									<exclude>module-info.class</exclude>
-									<exclude>META-INF/MANIFEST.MF</exclude>
-									<exclude>META-INF/LICENSE</exclude>
-									<exclude>META-INF/LICENSE.txt</exclude>
-									<exclude>META-INF/NOTICE</exclude>
-									<exclude>META-INF/NOTICE.txt</exclude>
+									<exclude>**/*module-info.class</exclude>
+									<exclude>META-INF/*.MF</exclude>
 									<exclude>META-INF/DEPENDENCIES</exclude>
 									<exclude>META-INF/*.SF</exclude>
 									<exclude>META-INF/*.DSA</exclude>
@@ -400,6 +396,22 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 								</excludes>
 							</filter>
 						</filters>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+									<resource>.md</resource>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+									<addHeader>false</addHeader>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<manifestEntries>
+										<Main-Class>${main.class}</Main-Class>
+										<Multi-Release>true</Multi-Release>
+									</manifestEntries>
+								</transformer>
+							</transformers>
 					</configuration>
 				</plugin>
 				<plugin>
