--- a/SpiNNaker-py2json/pom.xml
+++ b/SpiNNaker-py2json/pom.xml
@@ -33,6 +33,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<main.class>uk.ac.manchester.spinnaker.py2json.MachineDefinitionConverter</main.class>
 		<from.py>nosuchfile.py</from.py>
 		<to.json>config.json</to.json>
+		<program.name>py2json</program.name>
 	</properties>
 
 	<dependencies>
@@ -73,6 +74,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.stefanbirkner</groupId>
+			<artifactId>system-lambda</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
@@ -126,6 +131,22 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 									<mainClass>${main.class}</mainClass>
 								</transformer>
 							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.skife.maven</groupId>
+				<artifactId>really-executable-jar-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>really-executable-jar</goal>
+						</goals>
+						<configuration>
+							<programFile>${program.name}</programFile>
+							<attachProgramFile>true</attachProgramFile>
 						</configuration>
 					</execution>
 				</executions>
