--- a/pom.xml
+++ b/pom.xml
@@ -678,6 +678,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.skife.maven</groupId>
+					<artifactId>really-executable-jar-maven-plugin</artifactId>
+					<version>2.0.0</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
