--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -307,6 +307,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<version>${log4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
+			<dependency>
+			    <groupId>mysql</groupId>
+			    <artifactId>mysql-connector-java</artifactId>
+			    <version>${mysql.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
