--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<jython.version>2.7.3</jython.version>
 		<error-prone.version>2.18.0</error-prone.version>
 		<picocli.version>4.7.0</picocli.version>
+		<mysql.version>8.0.32</mysql.version>
 	</properties>
 
 	<dependencyManagement>
