--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -47,17 +47,11 @@ jobs:
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
         # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
-        version: [ 11 ]
+        version: [ 17 ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
-    # CodeQL defaults to wrong version without this.
-    - name: Initialize Java
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -70,7 +64,8 @@ jobs:
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
     # Set up right Java version: https://github.com/github/codeql-action/issues/825
-    - uses: actions/setup-java@v3.6.0
+    - name: Initialize Java ${{ matrix.version }}
+      uses: actions/setup-java@v3.6.0
       with:
         java-version: ${{ matrix.version }}
         distribution: zulu
