--- a/SpiNNaker-allocserv/src/main/resources-filtered/swagger.properties
+++ b/SpiNNaker-allocserv/src/main/resources-filtered/swagger.properties
@@ -16,7 +16,7 @@ title = ${project.name}
 description = ${project.description}
 version = ${project.version}
 contact = ${project.organization.name}
-license = GNU General Public License, version 3
-license.url = https://www.gnu.org/licenses/gpl-3.0.en.html
+license = Apache License, Version 2.0
+license.url = http://www.apache.org/licenses/LICENSE-2.0
 # Link to terms of service, when we define them
 # terms.url = ???
