--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -310,6 +310,7 @@ limitations under the License.
 			    <groupId>mysql</groupId>
 			    <artifactId>mysql-connector-java</artifactId>
 			    <version>${mysql.version}</version>
+			    <scope>runtime</scope>
 			</dependency>
 			<dependency>
 	            <groupId>org.testcontainers</groupId>
