--- a/pom.xml
+++ b/pom.xml
@@ -785,7 +785,7 @@ limitations under the License.
 	<name>SpiNNaker Java Host</name>
 	<description>Implementation of the host software for SpiNNaker in Java.</description>
 	<inceptionYear>2018</inceptionYear>
-	<url>http://spinnakermanchester.github.io/</url>
+	<url>https://spinnakermanchester.github.io/</url>
 	<organization>
 		<name>SpiNNaker Team @ University of Manchester</name>
 		<url>http://apt.cs.manchester.ac.uk/projects/SpiNNaker/</url>
@@ -818,7 +818,7 @@ limitations under the License.
 		<site>
 			<id>github-pages</id>
 			<name>GitHub Pages</name>
-			<url>http://spinnakermanchester.github.io/JavaSpiNNaker</url>
+			<url>https://spinnakermanchester.github.io/JavaSpiNNaker</url>
 		</site>
 	</distributionManagement>
 	<mailingLists>
