--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -306,19 +306,6 @@ limitations under the License.
 				<version>${log4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
-			<dependency>
-			    <groupId>mysql</groupId>
-			    <artifactId>mysql-connector-java</artifactId>
-			    <version>${mysql.version}</version>
-			    <scope>runtime</scope>
-			</dependency>
-			<dependency>
-	            <groupId>org.testcontainers</groupId>
-	            <artifactId>testcontainers-bom</artifactId>
-	            <version>${testcontainers.version}</version>
-	            <type>pom</type>
-	            <scope>import</scope>
-        	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -492,8 +479,9 @@ limitations under the License.
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <scope>runtime</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.testcontainers</groupId>
@@ -505,7 +493,6 @@ limitations under the License.
 		    <artifactId>testcontainers</artifactId>
 		    <scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<description>A board allocation service for SpiNNaker.</description>
