--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@ limitations under the License.
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+	            <groupId>org.testcontainers</groupId>
+	            <artifactId>testcontainers-bom</artifactId>
+	            <version>${testcontainers.version}</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+        	</dependency>
 
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
@@ -345,6 +352,11 @@ limitations under the License.
 				<groupId>org.glassfish</groupId>
 				<artifactId>javax.el</artifactId>
 				<version>3.0.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.mysql</groupId>
+			    <artifactId>mysql-connector-j</artifactId>
+			    <version>${mysql.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.stefanbirkner</groupId>
