--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,9 +106,6 @@ jobs:
       run: mvn directory:highest-basedir@find-root checkstyle:check --settings $SETTINGS_FILE
     - name: "Check: Documentation"
       run: mvn javadoc:aggregate --settings $SETTINGS_FILE -P "!jsp-precompile"
-    - name: Validate CITATION.cff
-      if: matrix.java == 11
-      uses: dieghernan/cff-validator@v2.3
 
   minor-style:
     needs: compile
@@ -126,3 +123,5 @@ jobs:
       run: mvn exec:exec@check-for-fixme --settings $SETTINGS_FILE -P CheckForFIXME
     - name: "Check: copyright declarations"
       run: mvn apache-rat:check --settings $SETTINGS_FILE -V || (find . -type f -name 'rat*.txt' -print | xargs grep -l unapproved | xargs cat; exit 1)
+    - name: "Check: CITATION.cff validity"
+      uses: dieghernan/cff-validator@v2.3
