--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -73,6 +73,12 @@ jobs:
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
       uses: github/codeql-action/autobuild@v2
+      env:
+        # Workaround for occasional unreliable downloads.
+        # See https://stackoverflow.com/q/55899091/301832 for details
+        MAVEN_OPTS: >
+          -Dmaven.wagon.httpconnectionManager.ttlSeconds=25
+          -Dmaven.wagon.http.retryHandler.count=3
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
