Second attempt to fix the download reliability problem
Maven was ignoring the setting I was using. This other approach ought to
work, provided the config is right. The documentation of this is very
poor and confusing!

--- a/.github/workflows/publish-pkgs.yml
+++ b/.github/workflows/publish-pkgs.yml
@@ -21,9 +21,10 @@ env:
   SETTINGS_FILE: .github/settings.xml
   # Workaround for occasional unreliable downloads.
   # See https://stackoverflow.com/q/55899091/301832 for details
+  # Except Maven doesn't use Wagon any more, but Aether.
+  # https://maven.apache.org/resolver/configuration.html
   MAVEN_OPTS: >
-    -Dmaven.wagon.httpconnectionManager.ttlSeconds=25
-    -Dmaven.wagon.http.retryHandler.count=3
+    -Daether.connector.http.connectionMaxTtl=25
 
 jobs:
   publish:
