--- a/keycloak-management-client/pom.xml
+++ b/keycloak-management-client/pom.xml
@@ -22,7 +22,7 @@ limitations under the License.
 	<parent>
 		<groupId>uk.ac.manchester.spinnaker</groupId>
 		<artifactId>SpiNNaker</artifactId>
-		<version>7.0.0-SNAPSHOT</version>
+		<version>7.0.0-a5</version>
 	</parent>
 	<artifactId>keycloak-management-client</artifactId>
 	<name>Keycloak Client</name>
